# wmlscriptc

./: LICENSE  README.md  meson.build
include/: gw-config.h
include/gwlib/: gwlib.h  log.h
wmlscript/: meson.build
